--- a/QuickFun/QuickFun.Games/QuickFun.Games.csproj
+++ b/QuickFun/QuickFun.Games/QuickFun.Games.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\QuickFun.Domain\QuickFun.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Http" Version="10.0.1" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
