--- a/QuickFun/QuickFun.Games/QuickFun.Games.csproj
+++ b/QuickFun/QuickFun.Games/QuickFun.Games.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Http" Version="10.0.1" />
+    <PackageReference Include="System.Net.Http.Json" Version="10.0.1" />
   </ItemGroup>
 
   <PropertyGroup>
